finished saving but close button, alignment of the tasks, size of the tasks need to be fixed

--- a/habit-tracker/src/css/submitgoals.css
+++ b/habit-tracker/src/css/submitgoals.css
@@ -33,3 +33,10 @@
     background-color: var(--submit-bg);
     cursor: pointer;
 }
+
+#submit-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
